<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="40dp"
    android:background="@drawable/paleblue_border"
    android:backgroundTint="#D7E3E4"
    android:padding="10dp"
    tools:context=".GroupDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button_fragment_taskDetails_backToTasks"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_fragment_taskList_back_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_fragment_teamDetails_userMembers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="52dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="25dp"
        android:text="Team Details"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Group ID:"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_fragment_groupDetails_groupId"
        app:layout_constraintStart_toStartOf="@+id/recyclerView_fragment_teamDetails_userMembers" />

    <Button
        android:id="@+id/button_fragment_groupDetails_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="76dp"
        android:foregroundGravity="bottom"
        android:text="@string/button_fragment_taskList_confirm_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_fragment_groupDetails_groupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="31dp"
        android:text="@string/placeholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_fragment_groupDetails_confirm"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>